# INCITE_data_docs

./: .gitignore  .readthedocs.yaml  README.md
docs/source/: Data_Outeline.rst  citation.rst  conf.py  environment.yml  index.rst  parameters.csv  publication.rst  tools.rst
docs/source/INCITE/: a.out  fort.16  h_params.csv  ksoderlu_parameters.csv  log.txt  m_moritz_list.f90  mheimpel_Outeline.rst  mheimpel_parameters.csv  mheimpel_parameters.numbers  moritz_parameters.csv  moritz_runs.csv  parameter_check.f90  parameters.csv  plot_Moritz_examples.sh  plot_Rakesh_examples.sh  rakesh_parameters.csv  rakesh_runs.csv  ryadav_Outeline.rst  ryadav_parameters.csv  ryadav_parameters.numbers
docs/source/INCITE/INCITE_convert_plot/: convert.py  convert_main_input.py  find_first_last_Rayleigh_data.py  pdf_to_120dpi_png.sh  pdf_to_png.sh  plot_AZ_Avgs_moritz.py  plot_AZ_Avgs_rakesh.py  plot_Equatorial_Slices_rakesh.py  plot_G_Avgs_moritz.py  plot_G_Avgs_rakesh.py  plot_Moritz_examples.py  plot_Moritz_examples2.py  plot_Moritz_examples_0.py  plot_Moritz_examples_1.py  plot_Moritz_examples_M3.py  plot_Rakesh_examples.py  plot_Shell_Slices_moritz.py  plot_Shell_Slices_rakesh.py  plot_Shell_Spectra_moritz.py  plot_Shell_Spectra_rakesh.py  png_to_pdf.sh  rayleigh.py
docs/source/INCITE/ksoderlu/GridTest/: param.csv
docs/source/INCITE/mheimpel/: publications.rst
docs/source/INCITE/mheimpel/rayleigh_back2/: param.csv
docs/source/INCITE/ryadav/: outputs.csv  publications.rst
src/: Makefile.in  config.status  configure  configure.ac
src/C_src/: cmkdir.c
src/Fortran_src/: INCITE_checkpoint_converter.f90  rayleigh99_rst_param_IO.f90  t_rayleigh_restart_IO.f90
src/INCITE_convert/: INCITE_lut_mapping.py  convert.py  convert_main_input.py  convert_main_input.spec
src/work/: Makefile
(+2976 files in other folders)
